--- a/dsmanage/pom.xml
+++ b/dsmanage/pom.xml
@@ -31,6 +31,7 @@
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <configuration>
+                    <uriEncoding>UTF-8</uriEncoding>
                     <port>8080</port>
                     <path>/</path>
                 </configuration>
