装了redis，虚拟机见网盘

--- a/dsrest/pom.xml
+++ b/dsrest/pom.xml
@@ -69,6 +69,10 @@
             <artifactId>servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
 
 
 
