实现了前台获取商品分类列表，实现了前台报错接口

--- a/dscommon/pom.xml
+++ b/dscommon/pom.xml
@@ -108,7 +108,7 @@
         </dependency>
 
 
-        <!-- httpclient -->
+        <!-- httpClient -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
