--- a/dsportal/pom.xml
+++ b/dsportal/pom.xml
@@ -41,6 +41,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>ds</groupId>
+            <artifactId>ds-manage-pojo</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
