--- a/dsrest/pom.xml
+++ b/dsrest/pom.xml
@@ -32,6 +32,11 @@
         </dependency>
         <dependency>
             <groupId>ds</groupId>
+            <artifactId>ds-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>ds</groupId>
             <artifactId>ds-manage-mapper</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
