实现了缓存刷新服务，商品描述用新表来描述，实现了规格参数模板的查询与添加，数据库结构已更新

--- a/dsmanage/ds-manage-controller/src/main/resources/resource/resouse.properties
+++ b/dsmanage/ds-manage-controller/src/main/resources/resource/resouse.properties
@@ -6,3 +6,12 @@ FTP_PASSWORD=dianshang
 FTP_BASE_PATH=/var/www/html
 #图片服务器配置
 IMAGE_BASE_URL=http://192.168.56.101
+
+#rest服务base地址
+REST_BASE_ADDR=http://127.0.0.1:8081/rest/
+#rest服务redis缓存服务路径
+REDIS_SERVICE_ADDR=/cache/sync/
+#redis服务中的内容同步服务路径
+REDIS_CONTENT_ADDR=/content/
+#redis服务中的商品分类同步路劲
+REDIS_CAT_ADDR=/cat/
