--- a/dscommon/pom.xml
+++ b/dscommon/pom.xml
@@ -45,6 +45,11 @@
 
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+        </dependency>
 
         <!-- Spring -->
         <dependency>
