--- a/dscommon/pom.xml
+++ b/dscommon/pom.xml
@@ -159,6 +159,10 @@
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-crypto</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
