--- a/dsparent/pom.xml
+++ b/dsparent/pom.xml
@@ -208,6 +208,14 @@
                 <artifactId>solr-solrj</artifactId>
                 <version>${org.apache.solr.version}</version>
             </dependency>
+            <!--加密-->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-crypto</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+
+
 
 
         </dependencies>
@@ -243,6 +251,11 @@
                 <plugin>
                     <groupId>org.apache.tomcat.maven</groupId>
                     <artifactId>tomcat7-maven-plugin</artifactId>
+                    <version>2.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat6-maven-plugin</artifactId>
                     <version>2.2</version>
                 </plugin>
             </plugins>
